@startuml
scale 1.2
class GUI
class globalMouseHook{
    - bool pressedEvent
    - bool leftPressed
    - bool rightPressed
    - bool middlePressed
    + on_click()
    + return_default()
}
class globalKeyboardHook{
    + set_hotKey(callback)
    + clear_hotkey()
    + on_press()
}
class mouseTurboClick{
    - float interval
    - bool rightOn
    - bool leftOn
    - bool middleOn
    - bool running 
    + set_attributes()
    + full_auto_mode()
    + semi_auto_mode()
    + run()
    + stop()
}
class SettingManager{
    - dict default_settings
    - dict settings
    + load()
    + save()
    + get()
    + set()
    + reset_all()
}

globalMouseHook --|> Thread
globalKeyboardHook --|> Thread
mouseTurboClick --|> Thread

GUI *--> globalMouseHook : has a
GUI *--> globalKeyboardHook : has a
GUI *--> mouseTurboClick : has a
GUI *-right-> SettingManager : has a
mouseTurboClick -left-> globalMouseHook : use
globalKeyboardHook -left-> mouseTurboClick : call
@enduml